<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail_teknik"
    android:orientation="vertical"
    android:background="@drawable/back">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_teknik_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technic_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_item_photo_teknik"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginRight="16dp"
                android:src="@android:color/darker_gray"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pengertian_teknik"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/tv_set_pengertian"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/content_pengertian"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:text="@string/bahan"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:text="@string/content_bahan"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set_bahan"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:text="@string/cara"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:text="@string/content_cara"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set_cara"/>
        </androidx.cardview.widget.CardView>
        <TextView
        android:text="@string/kelebihan_teknik"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:text="@string/content_kelebihan"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set_kelebihan"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:text="@string/kekurangan_teknik"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:text="@string/content_kelebihan"
                android:textColor="@android:color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set_kekurangan"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>